--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
           <p class="about_us_text"> Hello! We are studio "MY DANCE". We so yang studio, but we can present so good show. Studio have many professional artist with good skills, this tem have experiance in many country. What we can give you?-Kontemp,acrobatic, circus discipline, we give you many emotionals and you dont forget us!</p>
         </div>
         <div class="slide_movie">
-        <video id="vid" autoplay="true" loop="true" controls poster="asset/logo.png" muted
-          <!-- <source src="movie/This Starts Today Cirque du Soleil Tour Stories   Episode 3   Cirque du Soleil.mp4">
-        </video> -->
+        <!-- <video id="vid" autoplay="true" loop="true" controls poster="asset/logo.png" muted -->
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/jAsiLB4-yG4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <!-- </video> --> -->
         </div>
       </div>
 
@@ -110,7 +110,40 @@
       </div>
 
     </section>
-    <footer></footer>
+    <footer class="footer">
+      <div class="footer_inner">
+        <div class="footer_left">
+          <ul class="footer_contact_list">
+            <li class="footer_contacts_item">
+              <div class="footer_contacts_title">Contact us</div>
+            </li>
+            <li class="footer_contacts_item"> Tel.
+              <a class="footer_cocntacts_link" href="tel:380979508465">+380979508465</a>
+            </li>
+            <li class="footer_contacts_item"> E-mail.
+              <a class="footer_cocntacts_link" href="mailto:hwarang88@inbox.ru">hwarang88@inbox.ru</a>
+            </li>
+            <li class="footer_contacts_item"> Adress: str.Nebesnoy sotni 29/35 (5 floors)
+            </li>
+          </ul>
+        </div>
+        <div class="footer_right">
+          <div class="social">
+            <a class="social_link" href="https://www.instagram.com/mydancekremenchug/" target="_blank">
+              <img class="social_icon" src="asset/Instagram_icon-icons.com_66804.svg" alt="">
+            </a>
+          </div>
+          <ul class="lang_list_footer">
+            <li class="lang_item_footer">
+              <a class="lang_link_footer" href="#">EN</a>
+            </li>
+            <li class="lang_item_footer">
+              <a class="lang_link_footer" href="#">RU</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </footer>
   </div>
 </body>
 </html>
