--- a/index.html
+++ b/index.html
@@ -53,19 +53,19 @@
       <div class="swiper mySwiper">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
-            <img src="asset/60074248_2067978779994632_5181957701382438912_o.jpg" alt="">
+            <img src="asset/DSC_7438.jpg" alt="">
           </div>
           <div class="swiper-slide">
-            <img src="asset/755242210112494.jpg" alt="">
+            <img src="asset/DSC_7453.jpg" alt="">
           </div>
           <div class="swiper-slide">
-            <img src="asset/961337947_0_131_2500_1537_1920x0_80_0_0_14cdfbdccc8853001b26b54b9da9a4bf.jpg" alt="">
+            <img src="asset/DSC_7472.jpg" alt="">
           </div>
           <div class="swiper-slide">
-            <img src="asset/by-M-A-Lemire-2019-from-Show-Alegria-Cirque-du-Soleil-cover.jpg" alt="">
+            <img src="asset/DSC_7474.jpg" alt="">
           </div>
           <div class="swiper-slide">
-            <img src="asset/Цирк-Дю-Солей-Аватар-Toruk-1.jpg" alt="">
+            <img src="asset/DSC_7527.jpg" alt="">
           </div>
         </div>
         <div class="swiper-button-next"></div>
@@ -88,7 +88,6 @@
         <!-- </video> --> -->
         </div>
       </div>
-
     </section>
     <section class="deals">
       <div class="programs_price">
