add change english nav

--- a/index.html
+++ b/index.html
@@ -22,19 +22,19 @@
       <div class="nav">
         <ul class="nav_list">
           <li class="nav_item">
-            <a class="nav_link" href="#">ГЛАВНАЯ</a>
+            <a class="nav_link" href="#">HOME</a>
           </li>
           <li class="nav_item">
-            <a class="nav_link" href="#">О НАС</a>
+            <a class="nav_link" href="#">ABOUT US</a>
           </li>
           <li class="nav_item">
-            <a class="nav_link" href="#">АРТИСТЫ</a>
+            <a class="nav_link" href="#">MOVIE</a>
           </li>
           <li class="nav_item">
-            <a class="nav_link" href="#">КАСТИНГ</a>
+            <a class="nav_link" href="#">PRICE</a>
           </li>
           <li class="nav_item">
-            <a class="nav_link" href="#">КОНТАКТЫ</a>
+            <a class="nav_link" href="#">CONTACTS</a>
           </li>
           <li class="nav_item">
             <ul class="lang_list_header">
@@ -73,7 +73,7 @@
         <div class="swiper-pagination"></div>
         <div class="banner_content">
           <p class="banner_text">My Dance for You! If You wanted amazing and bright show, follow the link and fill out the form?!</p>
-          <button href="#" class="btn btn_banner">APPLY</button>
+          <button href="#" class="btn btn_banner">Fill the Form</button>
         </div>
       </div>
     </main>
