add opacity and border shadow for icon

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         <div class="footer_right">
           <div class="social">
             <a class="social_link" href="https://www.instagram.com/mydancekremenchug/" target="_blank">
-              <img class="social_icon" src="asset/Instagram_icon-icons.com_66804.svg" alt="">
+              <img class="social_icon" src="asset/Instagram_icon-icons.com_66804.svg" alt="insta">
             </a>
           </div>
           <ul class="lang_list_footer">
