--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css"/>
   <script src="https://unpkg.com/swiper/swiper-bundle.min.js" defer></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+  crossorigin="anonymous" defer></script>
   <script src="script.js" defer></script>
   <script src="jquery.js" defer></script>
   <title>MY Dance</title>
@@ -61,7 +62,7 @@
             <img src="asset/DSC_7453.jpg" alt="">
           </div>
           <div class="swiper-slide">
-            <img src="asset/DSC_7472.jpg" alt="">
+            <img src="asset/DSC_0016.JPG" alt="">
           </div>
           <div class="swiper-slide">
             <img src="asset/DSC_7474.jpg" alt="">
