--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <div class="swiper mySwiper">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
-            <img src="asset/DSC_7438.jpg" alt="">
+            <img src="asset/DSC_0145.png" alt="">
           </div>
           <div class="swiper-slide">
             <img src="asset/DSC_7453.jpg" alt="">
