--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
   <script src="https://unpkg.com/swiper/swiper-bundle.min.js" defer></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
   crossorigin="anonymous" defer></script>
+  <script src="https://code.jquery.com/jquery-3.2.1.min.js" defer></script> 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.waitforimages/2.2.0/jquery.waitforimages.min.js" defer></script> 
   <script src="script.js" defer></script>
   <script src="jquery.js" defer></script>
+  <script src="accordion.js" defer></script>
   <title>MY Dance</title>
 </head>
 <body>
@@ -56,13 +59,13 @@
       <div class="swiper mySwiper">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
-            <img src="asset/DSC_0145.png" alt="">
+            <img src="asset/IMG_3441.JPG" alt="">
           </div>
           <div class="swiper-slide">
             <img src="asset/DSC_7453.jpg" alt="">
           </div>
           <div class="swiper-slide">
-            <img src="asset/DSC_0016.JPG" alt="">
+            <img src="asset/IMG_3437.JPG" alt="">
           </div>
           <div class="swiper-slide">
             <img src="asset/DSC_7474.jpg" alt="">
@@ -112,6 +115,60 @@
       </div>
 
     </section>
+
+
+    <div class="flex-container">
+      <div class="spinner">
+        <p>
+        
+        <div class="cube1"></div>
+        <div class="cube2"></div>
+        Loading...
+        </p>
+      </div>
+      <div class="flex-slide home">
+    
+        <div class="flex-title flex-title-home">Contemp</div>
+        <div class="flex-about flex-about-home">
+          <p> - is a genre of dance performance that developed during the mid-twentieth century and has since grown to become one of the dominant genres for formally trained dancers throughout the world, with particularly strong popularity in the U.S. and Europe.</p>
+        </div>
+      </div>
+      <div class="flex-slide about">
+        <div class="flex-title">Acrobatic</div>
+        <div class="flex-about">
+          <p> - is the performance of human feats of balance, agility, and motor coordination.</p>
+        </div>
+      </div>
+      <div class="flex-slide work">
+        <div class="flex-title">Gymnastics</div>
+        <div class="flex-about">
+          <p> - is a sport that includes physical exercises requiring balance, strength, flexibility, agility, coordination, and endurance.</p>
+          <!-- <ul>
+            <li>First piece of work</li>
+            <li>Second piece of work</li>
+            <li>Third piece of work</li>
+          </ul> -->
+        </div>
+      </div>
+      <div class="flex-slide contact">
+        <div class="flex-title">Stretching</div>
+        <div class="flex-about">
+          <p> - is a form of physical exercise in which a specific muscle or tendon (or muscle group) is deliberately flexed or stretched in order to improve the muscle's felt elasticity and achieve comfortable muscle tone.</p>
+          <!-- <form class="contact-form">
+            <p>Email
+              <input type="text" name="email">
+            </p>
+            <p>Comment
+              <textarea type="text" name="comment" row="5"></textarea>
+            </p>
+            <p>
+              <input type="submit" name="email" value="Send Message">
+            </p>
+          </form> -->
+        </div>
+      </div>
+    </div>
+
     <footer class="footer">
       <div class="footer_inner">
         <div class="footer_left">
@@ -161,5 +218,6 @@
       </div>
     </div>
   </div>
+  
 </body>
 </html>
