--- a/index.html
+++ b/index.html
@@ -59,19 +59,19 @@
       <div class="swiper mySwiper">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
-            <img src="asset/IMG_3441.JPG" alt="">
+            <img src="asset/DSCF8519.jpg" alt="">
           </div>
           <div class="swiper-slide">
-            <img src="asset/DSC_7453.jpg" alt="">
+            <img src="asset/DSCF8523.jpg" alt="">
           </div>
           <div class="swiper-slide">
-            <img src="asset/IMG_3437.JPG" alt="">
+            <img src="asset/DSCF8550.jpg" alt="">
           </div>
           <div class="swiper-slide">
-            <img src="asset/DSC_7474.jpg" alt="">
+            <img src="asset/DSCF8551.jpg" alt="">
           </div>
           <div class="swiper-slide">
-            <img src="asset/DSC_7527.jpg" alt="">
+            <img src="asset/DSCF8730.jpg" alt="">
           </div>
         </div>
         <div class="swiper-button-next"></div>
@@ -131,6 +131,11 @@
         <div class="flex-title flex-title-home">Contemp</div>
         <div class="flex-about flex-about-home">
           <p> - is a genre of dance performance that developed during the mid-twentieth century and has since grown to become one of the dominant genres for formally trained dancers throughout the world, with particularly strong popularity in the U.S. and Europe.</p>
+          <div class="flex_slide_movie">
+            <!-- <video id="vid" autoplay="true" loop="true" controls poster="asset/logo.png" muted -->
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/jAsiLB4-yG4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <!-- </video> --> -->
+          </div>
         </div>
       </div>
       <div class="flex-slide about">
