add picture in accordeon after

--- a/index.html
+++ b/index.html
@@ -59,19 +59,19 @@
       <div class="swiper mySwiper">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
-            <img src="asset/DSCF8519.jpg" alt="">
+            <img src="asset/IMG_20211229_055119_607.jpg" alt="">
           </div>
           <div class="swiper-slide">
-            <img src="asset/DSCF8523.jpg" alt="">
+            <img src="asset/inst_10slides.jpg" alt="">
           </div>
           <div class="swiper-slide">
-            <img src="asset/DSCF8550.jpg" alt="">
+            <img src="asset/aleks.jpg" alt="">
           </div>
           <div class="swiper-slide">
-            <img src="asset/DSCF8551.jpg" alt="">
+            <img src="asset/" alt="">
           </div>
           <div class="swiper-slide">
-            <img src="asset/DSCF8730.jpg" alt="">
+            <img src="asset/" alt="">
           </div>
         </div>
         <div class="swiper-button-next"></div>
@@ -131,10 +131,24 @@
         <div class="flex-title flex-title-home">Contemp</div>
         <div class="flex-about flex-about-home">
           <p> - is a genre of dance performance that developed during the mid-twentieth century and has since grown to become one of the dominant genres for formally trained dancers throughout the world, with particularly strong popularity in the U.S. and Europe.</p>
+
           <div class="flex_slide_movie">
             <!-- <video id="vid" autoplay="true" loop="true" controls poster="asset/logo.png" muted -->
-              <iframe width="560" height="315" src="https://www.youtube.com/embed/jAsiLB4-yG4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <!-- </video> --> -->
+            <div class="contemp1">
+              <a href="#popup1" class="picture1"><img src="asset/contemp.jpg" alt=""></a>
+            </div>
+
+          </div>
+        </div>
+      </div>
+      <div id="popup1" class="popup1">
+        <div class="popup1_body">
+          <div class="popup1_content">
+            <a href="" class="popup1_close">X</a>
+            <div class="poup1_title">Modal window</div>
+            <div class="poup1_text">
+              <iframe width="800" height="450" src="https://www.youtube.com/embed/jAsiLB4-yG4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
           </div>
         </div>
       </div>
@@ -142,12 +156,36 @@
         <div class="flex-title">Acrobatic</div>
         <div class="flex-about">
           <p> - is the performance of human feats of balance, agility, and motor coordination.</p>
+          <div class="flex_slide_movie">
+            <!-- <video id="vid" autoplay="true" loop="true" controls poster="asset/logo.png" muted -->
+            <div class="contemp1">
+              <a href="#popup1" class="picture1"><img src="asset/acro.jpg" alt=""></a>
+            </div>
+            <!-- </video> -->
+          </div>
+        </div>
+      </div>
+      <div id="popup1" class="popup1">
+        <div class="popup1_body">
+          <div class="popup1_content">
+            <a href="" class="popup1_close">X</a>
+            <div class="poup1_title">Modal window</div>
+            <div class="poup1_text">
+              <iframe width="800" height="450" src="https://www.youtube.com/embed/jAsiLB4-yG4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+          </div>
         </div>
       </div>
       <div class="flex-slide work">
         <div class="flex-title">Gymnastics</div>
         <div class="flex-about">
           <p> - is a sport that includes physical exercises requiring balance, strength, flexibility, agility, coordination, and endurance.</p>
+
+          <div class="flex_slide_movie">
+            <!-- <video id="vid" autoplay="true" loop="true" controls poster="asset/logo.png" muted -->
+            <div class="contemp1">
+              <a href="#popup1" class="picture1"><img src="asset/gymnastics.jpg" alt=""></a>
+            </div>
           <!-- <ul>
             <li>First piece of work</li>
             <li>Second piece of work</li>
@@ -155,10 +193,31 @@
           </ul> -->
         </div>
       </div>
+
+      <div id="popup1" class="popup1">
+        <div class="popup1_body">
+          <div class="popup1_content">
+            <a href="" class="popup1_close">X</a>
+            <div class="poup1_title">Modal window</div>
+            <div class="poup1_text">
+              <iframe width="800" height="450" src="https://www.youtube.com/embed/jAsiLB4-yG4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+          </div>
+        </div>
+      </div>
+      </div>  
+
       <div class="flex-slide contact">
         <div class="flex-title">Stretching</div>
         <div class="flex-about">
           <p> - is a form of physical exercise in which a specific muscle or tendon (or muscle group) is deliberately flexed or stretched in order to improve the muscle's felt elasticity and achieve comfortable muscle tone.</p>
+
+          <div class="flex_slide_movie">
+            <!-- <video id="vid" autoplay="true" loop="true" controls poster="asset/logo.png" muted -->
+            <div class="contemp1">
+              <a href="#popup1" class="picture1"><img src="asset/stretching.jpg" alt=""></a>
+            </div>
+
           <!-- <form class="contact-form">
             <p>Email
               <input type="text" name="email">
@@ -170,6 +229,18 @@
               <input type="submit" name="email" value="Send Message">
             </p>
           </form> -->
+        </div>
+      </div>
+    </div>
+      <div id="popup1" class="popup1">
+        <div class="popup1_body">
+          <div class="popup1_content">
+            <a href="" class="popup1_close">X</a>
+            <div class="poup1_title">Modal window</div>
+            <div class="poup1_text">
+              <iframe width="800" height="450" src="https://www.youtube.com/embed/jAsiLB4-yG4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+          </div>
         </div>
       </div>
     </div>
