add adaptive burger js

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <script src="script.js" defer></script>
   <script src="jquery.js" defer></script>
   <script src="accordion.js" defer></script>
+  <script src="burger.js" defer></script>
   <title>MY Dance</title>
 </head>
 <body>
@@ -43,16 +44,22 @@
             <a class="nav_link" href="#">CONTACTS</a>
           </li>
           <li class="nav_item">
-            <ul class="lang_list_header">
+            <!-- <ul class="lang_list_header">
               <li class="lang_item">
                 <a class="lang_link" href="#">EN</a>
               </li>
               <li class="lang_item">
                 <a class="lang_link" href="#">RU</a>
               </li>
-            </ul>
+            </ul> -->
           </li>
         </ul>
+        <!-- Burger menu -->
+        <div class="hamb">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </div>
       </div>
     </header>
     <main class="picture_swiper">
