--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
             <img src="asset/aleks.jpg" alt="">
           </div>
           <div class="swiper-slide">
-            <img src="asset/" alt="">
+            <img src="asset/IMG_20211229_055119_607.jpg" alt="">
           </div>
           <div class="swiper-slide">
-            <img src="asset/" alt="">
+            <img src="asset/IMG_20211229_055119_607.jpg" alt="">
           </div>
         </div>
         <div class="swiper-button-next"></div>
