--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
   <script src="script.js" defer></script>
   <script src="jquery.js" defer></script>
   <script src="accordion.js" defer></script>
-  <script src="burger.js" defer></script>
   <title>MY Dance</title>
 </head>
 <body>
@@ -27,6 +26,13 @@
         </svg>
       </a>
       <div class="nav">
+
+        <div class="hamburger-menu">
+          <input id="menu_toggle" type="checkbox" />
+          <label class="menu_btn" for="menu_toggle">
+            <span></span>
+          </label>
+
         <ul class="nav_list">
           <li class="nav_item">
             <a class="nav_link" href="#">HOME</a>
