--- a/index.html
+++ b/index.html
@@ -281,14 +281,14 @@
               <img class="social_icon" src="asset/Instagram_icon-icons.com_66804.svg" alt="insta">
             </a>
           </div>
-          <ul class="lang_list_footer">
+          <!-- <ul class="lang_list_footer">
             <li class="lang_item_footer">
               <a class="lang_link_footer" href="#">EN</a>
             </li>
             <li class="lang_item_footer">
               <a class="lang_link_footer" href="#">RU</a>
             </li>
-          </ul>
+          </ul> -->
         </div>
       </div>
     </footer>
