add adapt slide movie

--- a/index.html
+++ b/index.html
@@ -278,15 +278,15 @@
         <div class="footer_left">
           <ul class="footer_contact_list">
             <li class="footer_contacts_item">
-              <div class="footer_contacts_title">Contact us</div>
+              <div class="footer_contacts_title">Контакти</div>
             </li>
             <li class="footer_contacts_item"> Tel.
-              <a class="footer_cocntacts_link" href="tel:380979508465">+380979508465</a>
+              <a class="footer_cocntacts_link" href="Тел.:380979508465">+380979508465</a>
             </li>
             <li class="footer_contacts_item"> E-mail.
               <a class="footer_cocntacts_link" href="mailto:hwarang88@inbox.ru">hwarang88@inbox.ru</a>
             </li>
-            <li class="footer_contacts_item"> Adress: str.Nebesnoy sotni 29/35 (5 floors)
+            <li class="footer_contacts_item"> Адреса: вул.Небесної сотні 29/35 (5 поверх)
             </li>
           </ul>
         </div>
